# taosii2caom2

./: Dockerfile  README.md  setup.cfg  setup.py
config/: config.yml
scripts/: config.yml  docker-entrypoint.sh  taosii_run.sh  taosii_run_incremental.sh
taosii2caom2/: composable.py  file2caom2_augmentation.py  main_app.py
taosii2caom2/tests/: conftest.py  test_caom_gen_visit.py  test_composable.py  test_main_app.py  test_storage_name.py
taosii2caom2/tests/data/: taos2_20230117T185417Z_star00000005.expected.xml  taos2_20230117T190351Z_cmos21_point_006.expected.xml  taos2_20230118T233621Z_star123987456.expected.xml  taos2_20230219T205154Z_cmos21_bias_001.expected.xml  taos2_20230219T205354Z_cmos21_dark_002.expected.xml  taos2_20230219T205554Z_cmos21_skyflat_003.expected.xml  taos2_20230219T205754Z_cmos21_domeflat_004.expected.xml  taos2_20230219T205954Z_cmos21_focus_005.expected.xml  taos2_20230219T210154Z_cmos21_point_006.expected.xml  taos2_20230301T080110Z_cmos21_point_006.expected.xml  taos2_20230302T083755Z_cmos21_bias_master.expected.xml  taos2_20230302T083955Z_cmos21_dark_master.expected.xml  taos2_20230302T084155Z_cmos21_skyflat_master.expected.xml  taos2_20230302T084355Z_cmos21_domeflat_master.expected.xml
taosii2caom2/tests/data/2024/try2/: taos2_20240221T014139Z_star987654321.expected.xml  taos2_20240221T033316Z_cmos31_012.expected.xml  taos2_20240221T033321Z_fsc_145.expected.xml  taos2_20240221T033325Z_star987654321.expected.xml  taos2_20240221T033329Z_star987654321_lcv.expected.xml  taos2_20241116T092303Z_cmos31_bias_012.expected.xml  (+7 more)
